Add the filename basename to the profile view

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -646,7 +646,7 @@
                                         <child>
                                           <object class="GtkHBox" id="hbox_vendor">
                                             <property name="visible">True</property>
-                                            <property name="spacing">3</property>
+                                            <property name="spacing">9</property>
                                             <child>
                                               <object class="GtkHBox" id="hbox5">
                                                 <property name="visible">True</property>
@@ -662,6 +662,7 @@
                                                 </child>
                                               </object>
                                               <packing>
+                                                <property name="expand">False</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
@@ -696,7 +697,7 @@
                                         <child>
                                           <object class="GtkHBox" id="hbox_copyright">
                                             <property name="visible">True</property>
-                                            <property name="spacing">3</property>
+                                            <property name="spacing">9</property>
                                             <child>
                                               <object class="GtkHBox" id="hbox10">
                                                 <property name="visible">True</property>
@@ -712,6 +713,7 @@
                                                 </child>
                                               </object>
                                               <packing>
+                                                <property name="expand">False</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
@@ -746,7 +748,7 @@
                                         <child>
                                           <object class="GtkHBox" id="hbox_type">
                                             <property name="visible">True</property>
-                                            <property name="spacing">3</property>
+                                            <property name="spacing">9</property>
                                             <child>
                                               <object class="GtkHBox" id="hbox6">
                                                 <property name="visible">True</property>
@@ -762,6 +764,7 @@
                                                 </child>
                                               </object>
                                               <packing>
+                                                <property name="expand">False</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
@@ -796,7 +799,7 @@
                                         <child>
                                           <object class="GtkHBox" id="hbox_size">
                                             <property name="visible">True</property>
-                                            <property name="spacing">3</property>
+                                            <property name="spacing">9</property>
                                             <child>
                                               <object class="GtkHBox" id="hbox30">
                                                 <property name="visible">True</property>
@@ -812,6 +815,7 @@
                                                 </child>
                                               </object>
                                               <packing>
+                                                <property name="expand">False</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
@@ -841,6 +845,57 @@
                                             <property name="fill">False</property>
                                             <property name="padding">3</property>
                                             <property name="position">3</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkHBox" id="hbox_filename">
+                                            <property name="visible">True</property>
+                                            <property name="spacing">9</property>
+                                            <child>
+                                              <object class="GtkHBox" id="hbox32">
+                                                <property name="visible">True</property>
+                                                <child>
+                                                  <object class="GtkLabel" id="label_title_filename">
+                                                    <property name="visible">True</property>
+                                                    <property name="label" translatable="yes" comments="The type of profile, e.g. display, scanner, etc.">File name:</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                              </object>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="position">0</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkHBox" id="hbox33">
+                                                <property name="visible">True</property>
+                                                <child>
+                                                  <object class="GtkLabel" id="label_filename">
+                                                    <property name="visible">True</property>
+                                                    <property name="label">filename</property>
+                                                    <property name="use_markup">True</property>
+                                                    <property name="wrap">True</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                              </object>
+                                              <packing>
+                                                <property name="position">1</property>
+                                              </packing>
+                                            </child>
+                                          </object>
+                                          <packing>
+                                            <property name="expand">False</property>
+                                            <property name="fill">False</property>
+                                            <property name="padding">3</property>
+                                            <property name="position">4</property>
                                           </packing>
                                         </child>
                                       </object>
