Fix up two translation comments

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -959,7 +959,7 @@
                                                 <child>
                                                   <object class="GtkLabel" id="label_title_size">
                                                     <property name="visible">True</property>
-                                                    <property name="label" translatable="yes" comments="The type of profile, e.g. display, scanner, etc.">File size:</property>
+                                                    <property name="label" translatable="yes" comments="The file size in bytes of the profile">File size:</property>
                                                   </object>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -1010,7 +1010,7 @@
                                                 <child>
                                                   <object class="GtkLabel" id="label_title_filename">
                                                     <property name="visible">True</property>
-                                                    <property name="label" translatable="yes" comments="The type of profile, e.g. display, scanner, etc.">File name:</property>
+                                                    <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">File name:</property>
                                                   </object>
                                                   <packing>
                                                     <property name="expand">False</property>
