Ensure the CIE widget is square

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1108,6 +1108,8 @@
                                                 <property name="visible">True</property>
                                               </object>
                                               <packing>
+                                                <property name="expand">False</property>
+                                                <property name="fill">False</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
