--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1223,65 +1223,71 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkVBox" id="vbox4">
+                  <object class="GtkAlignment" id="alignment6">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
-                    <property name="spacing">3</property>
+                    <property name="left_padding">12</property>
                     <child>
-                      <object class="GtkRadioButton" id="radiobutton_ouput_disable">
-                        <property name="label" translatable="yes" comments="Radio buttons in the prefs dialog">Do not enable display correction</property>
+                      <object class="GtkVBox" id="vbox4">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="use_underline">True</property>
-                        <property name="draw_indicator">True</property>
-                        <property name="group">radiobutton_ouput_global</property>
+                        <property name="orientation">vertical</property>
+                        <property name="spacing">3</property>
+                        <child>
+                          <object class="GtkRadioButton" id="radiobutton_ouput_disable">
+                            <property name="label" translatable="yes" comments="Radio buttons in the prefs dialog">Do not enable display correction</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">radiobutton_ouput_global</property>
+                          </object>
+                          <packing>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkRadioButton" id="radiobutton_ouput_global">
+                            <property name="label" translatable="yes" comments="Radio buttons in the prefs dialog">Apply _global display correction</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="active">True</property>
+                            <property name="draw_indicator">True</property>
+                          </object>
+                          <packing>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkRadioButton" id="radiobutton_ouput_atom">
+                            <property name="label" translatable="yes" comments="Radio buttons in the prefs dialog">_Set profile only for color managed applications</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">radiobutton_ouput_global</property>
+                          </object>
+                          <packing>
+                            <property name="position">2</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkRadioButton" id="radiobutton_ouput_both">
+                            <property name="label" translatable="yes" comments="Radio buttons in the prefs dialog">Do global correction and set profile for color managed applications</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">radiobutton_ouput_global</property>
+                          </object>
+                          <packing>
+                            <property name="position">3</property>
+                          </packing>
+                        </child>
                       </object>
-                      <packing>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkRadioButton" id="radiobutton_ouput_global">
-                        <property name="label" translatable="yes" comments="Radio buttons in the prefs dialog">Apply _global display correction</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="use_underline">True</property>
-                        <property name="active">True</property>
-                        <property name="draw_indicator">True</property>
-                      </object>
-                      <packing>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkRadioButton" id="radiobutton_ouput_atom">
-                        <property name="label" translatable="yes" comments="Radio buttons in the prefs dialog">_Set profile only for color managed applications</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="use_underline">True</property>
-                        <property name="draw_indicator">True</property>
-                        <property name="group">radiobutton_ouput_global</property>
-                      </object>
-                      <packing>
-                        <property name="position">2</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkRadioButton" id="radiobutton_ouput_both">
-                        <property name="label" translatable="yes" comments="Radio buttons in the prefs dialog">Do global correction and set profile for color managed applications</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="use_underline">True</property>
-                        <property name="draw_indicator">True</property>
-                        <property name="group">radiobutton_ouput_global</property>
-                      </object>
-                      <packing>
-                        <property name="position">3</property>
-                      </packing>
                     </child>
                   </object>
                   <packing>
@@ -1312,27 +1318,46 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkVBox" id="vbox9">
+                  <object class="GtkAlignment" id="alignment7">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
-                    <property name="spacing">6</property>
+                    <property name="left_padding">12</property>
                     <child>
-                      <object class="GtkHBox" id="hbox14">
+                      <object class="GtkVBox" id="vbox9">
                         <property name="visible">True</property>
-                        <property name="spacing">9</property>
-                        <property name="homogeneous">True</property>
+                        <property name="orientation">vertical</property>
+                        <property name="spacing">6</property>
                         <child>
-                          <object class="GtkHBox" id="hbox15">
+                          <object class="GtkHBox" id="hbox14">
                             <property name="visible">True</property>
+                            <property name="spacing">9</property>
+                            <property name="homogeneous">True</property>
                             <child>
-                              <object class="GtkLabel" id="label_rendering_display">
+                              <object class="GtkHBox" id="hbox15">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes" comments="What mode to use for display rendering intent">Display:</property>
+                                <child>
+                                  <object class="GtkLabel" id="label_rendering_display">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes" comments="What mode to use for display rendering intent">Display:</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="combobox_rendering_display">
+                                <property name="visible">True</property>
+                                <property name="sensitive">False</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">0</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                           </object>
@@ -1341,58 +1366,45 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkComboBox" id="combobox_rendering_display">
+                          <object class="GtkHBox" id="hbox16">
                             <property name="visible">True</property>
-                            <property name="sensitive">False</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="position">1</property>
-                          </packing>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkHBox" id="hbox16">
-                        <property name="visible">True</property>
-                        <property name="spacing">9</property>
-                        <property name="homogeneous">True</property>
-                        <child>
-                          <object class="GtkHBox" id="hbox17">
-                            <property name="visible">True</property>
+                            <property name="spacing">9</property>
+                            <property name="homogeneous">True</property>
                             <child>
-                              <object class="GtkLabel" id="label_rendering_softproof">
+                              <object class="GtkHBox" id="hbox17">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes" comments="Technical color word for softproof rendering intent">Softproof:</property>
+                                <child>
+                                  <object class="GtkLabel" id="label_rendering_softproof">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes" comments="Technical color word for softproof rendering intent">Softproof:</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="combobox_rendering_softproof">
+                                <property name="visible">True</property>
+                                <property name="sensitive">False</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">0</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                           </object>
                           <packing>
-                            <property name="position">0</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkComboBox" id="combobox_rendering_softproof">
-                            <property name="visible">True</property>
-                            <property name="sensitive">False</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
                       </object>
-                      <packing>
-                        <property name="position">1</property>
-                      </packing>
                     </child>
                   </object>
                   <packing>
